@@ -17,7 +17,6 @@
 package org.gradle.performance.fixture
 
 import com.google.common.base.Splitter
-import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.executer.ExecuterDecoratingGradleDistribution
 import org.gradle.integtests.fixtures.executer.GradleDistribution
 import org.gradle.integtests.fixtures.executer.GradleExecuterDecorator
@@ -25,8 +24,12 @@ import org.gradle.integtests.fixtures.executer.IntegrationTestBuildContext
 import org.gradle.integtests.fixtures.versions.ReleasedVersionDistributions
 import org.gradle.internal.jvm.Jvm
 import org.gradle.internal.os.OperatingSystem
+import org.gradle.internal.time.TimeProvider
+import org.gradle.internal.time.TrueTimeProvider
+import org.gradle.performance.measure.MeasuredOperation
 import org.gradle.performance.results.CrossVersionPerformanceResults
 import org.gradle.performance.results.DataReporter
+import org.gradle.performance.results.Flakiness
 import org.gradle.performance.results.MeasuredOperationList
 import org.gradle.performance.results.ResultsStore
 import org.gradle.performance.results.ResultsStoreHelper
@@ -44,6 +47,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
     TestProjectLocator testProjectLocator = new TestProjectLocator()
     final BuildExperimentRunner experimentRunner
     final ReleasedVersionDistributions releases
+    final TimeProvider timeProvider = new TrueTimeProvider()
 
     String testProject
     File workingDir
@@ -51,13 +55,13 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
 
     List<String> tasksToRun = []
     List<String> args = []
-    List<String> gradleOpts = ['-Xms2g', '-Xmx2g']
+    List<String> gradleOpts = []
     List<String> previousTestIds = []
-    int maxPermSizeMB = 256
 
     List<String> targetVersions = []
 
     BuildExperimentListener buildExperimentListener
+    InvocationCustomizer invocationCustomizer
     GradleExecuterDecorator executerDecorator
 
     CrossVersionPerformanceTestRunner(BuildExperimentRunner experimentRunner, DataReporter<CrossVersionPerformanceResults> reporter, ReleasedVersionDistributions releases) {
@@ -66,7 +70,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
         this.releases = releases
     }
 
-    CrossVersionPerformanceResults run() {
+    CrossVersionPerformanceResults run(Flakiness flakiness = Flakiness.not_flaky) {
         if (testId == null) {
             throw new IllegalStateException("Test id has not been specified")
         }
@@ -89,14 +93,14 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
             testProject: testProject,
             tasks: tasksToRun.collect { it.toString() },
             args: args.collect { it.toString() },
-            gradleOpts: resolveGradleOpts().collect { it.toString() },
+                gradleOpts: resolveGradleOpts(),
             daemon: useDaemon,
             jvm: Jvm.current().toString(),
             operatingSystem: OperatingSystem.current().toString(),
             versionUnderTest: GradleVersion.current().getVersion(),
             vcsBranch: Git.current().branchName,
             vcsCommits: [Git.current().commitId],
-            startTime: System.currentTimeMillis(),
+            startTime: timeProvider.getCurrentTime(),
             channel: ResultsStoreHelper.determineChannel()
         )
 
@@ -109,14 +113,14 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
             runVersion(buildContext.distribution(baselineVersion.version), perVersionWorkingDirectory(baselineVersion.version), baselineVersion.results)
         }
 
-        results.endTime = System.currentTimeMillis()
+        results.endTime = timeProvider.getCurrentTime()
 
         results.assertEveryBuildSucceeds()
 
         // Don't store results when builds have failed
         reporter.report(results)
 
-        results.assertCurrentVersionHasNotRegressed()
+        results.assertCurrentVersionHasNotRegressed(flakiness)
 
         return results
     }
@@ -164,9 +168,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
                 continue
             }
             if (version == 'none') {
-                // when 'none' is the only target version, no baselines will be used
-                addMostRecentFinalRelease = false
-                continue
+                return Collections.emptyList()
             }
             if (version == 'defaults') {
                 throw new IllegalArgumentException("'defaults' shouldn't be used in target versions.")
@@ -184,7 +186,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
             }
         }
 
-        if (addMostRecentFinalRelease) {
+        if (baselineVersions.empty || addMostRecentFinalRelease) {
             // Always include the most recent final release if we're not testing against a nightly or a snapshot
             baselineVersions.add(mostRecentFinalRelease)
         }
@@ -221,6 +223,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
             .warmUpCount(warmUpRuns)
             .invocationCount(runs)
             .listener(buildExperimentListener)
+            .invocationCustomizer(invocationCustomizer)
             .invocation {
                 workingDirectory(workingDir)
                 distribution(new ExecuterDecoratingGradleDistribution(dist, executerDecorator))
@@ -238,14 +241,37 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
     }
 
     def resolveGradleOpts() {
-        def gradleOptsInUse = [] + this.gradleOpts
-        if (!JavaVersion.current().isJava8Compatible() && gradleOptsInUse.count { it.startsWith('-XX:MaxPermSize=') } == 0) {
-            gradleOptsInUse << "-XX:MaxPermSize=${maxPermSizeMB}m".toString()
-        }
-        gradleOptsInUse
+        PerformanceTestJvmOptions.customizeJvmOptions(this.gradleOpts)
     }
 
     HonestProfilerCollector getHonestProfiler() {
         return experimentRunner.honestProfiler
+    }
+
+    void setupCleanupOnOddRounds() {
+        setupCleanupOnOddRounds('clean')
+    }
+
+    void setupCleanupOnOddRounds(String... cleanUpTasks) {
+        invocationCustomizer = new InvocationCustomizer() {
+            @Override
+            def <T extends InvocationSpec> T customize(BuildExperimentInvocationInfo invocationInfo, T invocationSpec) {
+                if (invocationInfo.iterationNumber % 2 == 1) {
+                    def builder = ((GradleInvocationSpec) invocationSpec).withBuilder()
+                    builder.setTasksToRun(cleanUpTasks as List)
+                    return builder.build()
+                } else {
+                    return invocationSpec
+                }
+            }
+        }
+        buildExperimentListener = new BuildExperimentListenerAdapter() {
+            @Override
+            void afterInvocation(BuildExperimentInvocationInfo invocationInfo, MeasuredOperation operation, BuildExperimentListener.MeasurementCallback measurementCallback) {
+                if (invocationInfo.iterationNumber % 2 == 1) {
+                    measurementCallback.omitMeasurement()
+                }
+            }
+        }
     }
 }
